@@ -57,6 +57,11 @@ us a note on ns-developers mailing list.</p>
   <li> It is now possible to print the Neighbor Cache (ARP and NDISC) by using
        the RoutingProtocolHelper
   </li>
+  <li> A TimeProbe class has been added to the data collection framework in 
+       the stats module, enabling TracedValues emitting values of type 
+       ns3::Time to be handled by the framework.
+  </li>
+
 </ul>
 
 <h2>Changes to existing API:</h2>
